--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </main>
 
     <script>
-        function on(n) {
+        var on = (n) => {
             const divSeries = document.getElementById('series');
             divSeries.innerHTML = "";
             let sentences = document.getElementById('sentences');
@@ -51,7 +51,7 @@
         
 
 
-        function fibTerm(n) {
+        var fibTerm = (n) => {
 
             let arr = [0, 1];
             for (let i = 2; i < n + 1; i++) {
@@ -61,8 +61,8 @@
         }
 
 
-        function fibSeries(n) {
-                    if (n == 0) return [];
+        var fibSeries = (n) => {
+                if (n == 0) return [];
                 if (n == 1) return [0];
                 if (n == 2) return [0, 1];
 
