--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--=========================== header ===========================-->
     <!--==============================================================-->
     <div class="bg-dark fixed-top flex-column p-2 text-center">
-        <h3 style="color:#fff">Fibonacci series</h3>
+        <h3 style="color:red">سری فیبوناچی</h3>
     </div>
 
     <!--==============================================================-->
