--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-2">
-                    <input type="number" id="fibInput" class="form-control mb-4" onchange="on(this.value)" placeholder="please enter your number" dir="ltr" min="0" />
+                    <input type="number" id="fibInput" class="form-control mb-4" onchange="on(this.value)" placeholder="لطفا عدد مورد نظر را وارد نمایید" dir="ltr" min="0" />
 
                     <p>The first <span id="sentences">(n)</span> sentences of the Fibonacci series is: <strong id="series"></strong></p>
                     <p><span id="nth">(n)</span> nth term of the Fibonacci series is: <strong id="term"></strong></p>
